--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -134,6 +134,10 @@ if(HAVE_SYS_PRCTL_H)
     target_compile_definitions(feather PRIVATE HAVE_SYS_PRCTL_H=1)
 endif()
 
+if(STATIC)
+    target_compile_definitions(feather PRIVATE STATIC=1)
+endif()
+
 if (NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
     target_compile_definitions(feather PRIVATE QT_NO_DEBUG=1)
 endif()
