Commit cd1cd5cb75611130e7471b4b41306eb55a6ffe2d introduced an issue for CMAKE_BUILD_TYPE=Debug:
  libringct.so => not found
  libcryptonote_basic.so => not found
  libcheckpoints.so => not found
  libdevice.so => not found
  libringct_basic.so => not found
  libcommon.so => not found
  libwallet-crypto.so => not found
  libcncrypto.so => not found
  libeasylogging.so => not found
  librandomx.so => not found
  libversion.so => not found

We'll only set `CMAKE_SKIP_RPATH` when in release.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -157,7 +157,11 @@ find_package(Boost 1.58 REQUIRED COMPONENTS
         locale)
 
 if(UNIX AND NOT APPLE)
-    set(CMAKE_SKIP_RPATH ON)
+    if (NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
+        # https://github.com/monero-project/monero-gui/issues/3142#issuecomment-705940446
+        set(CMAKE_SKIP_RPATH ON)
+    endif()
+
     find_package(X11 REQUIRED)
     message(STATUS "X11_FOUND = ${X11_FOUND}")
     message(STATUS "X11_INCLUDE_DIR = ${X11_INCLUDE_DIR}")
