MacOS: add touchbar support
Co-Authored-By: dsc <dsc@xmr.pm>

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "contrib/tor"]
 	path = contrib/tor
 	url = https://git.torproject.org/tor.git
+[submodule "contrib/KDMacTouchBar"]
+	path = contrib/KDMacTouchBar
+	url = https://github.com/KDAB/KDMacTouchBar.git
