--- a/.drone.yml
+++ b/.drone.yml
@@ -14,9 +14,10 @@ steps:
     commands:
     - git config --global url."http://gitea:3000/tor/".insteadOf https://git.torproject.org/
     - git config --global url."http://gitea:3000/".insteadOf https://github.com/
-    - git submodule update --init --depth 120 monero
-    - git submodule update --init --depth 120 --recursive monero
-    - TOR="/usr/local/tor/bin/tor" XMRIG="/xmrig/xmrig" make -j6 release-static
+    - git config --global url."http://gitea:3000/".insteadOf https://git.wownero.com/
+    - git submodule update --init monero
+    - git submodule update --init --recursive monero
+    - TOR="/usr/local/tor/bin/tor" XMRIG="/xmrig/xmrig" make -j8 release-static
     environment:
       OPENSSL_ROOT_DIR: /usr/local/openssl/
       CMAKEFLAGS_EXTRA: -DFETCH_DEPS=Off
@@ -45,17 +46,19 @@ volumes:
     path: /build/feather_files/files/linux-release/
 
 ---
-
 kind: pipeline
 type: docker
 name: linux-release-appimage
-
 steps:
   - name: build
     image: feather:appimage
+    volumes:
+     - name: files_linux_release
+       path: /files
     commands:
     - export FN="feather-`echo $DRONE_COMMIT_AFTER | cut -c 1-7`.zip"
     - export BRANCH="$DRONE_SOURCE_BRANCH"
+    - cp /files/$BRANCH/$FN feather.zip
     - bash ./contrib/build-appimage.sh
   - name: deploy
     image: feather:appimage
@@ -69,18 +72,18 @@ steps:
     - echo "writing to $TARGET_DIR/$FN"
     - mv "Feather-1.0-x86_64.AppImage" "$TARGET_DIR/$FN"
     - echo "[*] written to https://build.featherwallet.org/files/linux-release-appimage/$DRONE_SOURCE_BRANCH/$FN"
-
 volumes:
   - name: files_linux_appimage
     host:
       path: /build/feather_files/files/linux-release-appimage/
+  - name: files_linux_release
+    host:
+      path: /build/feather_files/files/linux-release/
 
 ---
-
 kind: pipeline
 type: docker
 name: windows-mxe-release
-
 steps:
   - name: build
     image: feather:win
@@ -92,9 +95,10 @@ steps:
     commands:
     - git config --global url."http://gitea:3000/tor/".insteadOf https://git.torproject.org/
     - git config --global url."http://gitea:3000/".insteadOf https://github.com/
-    - git submodule update --init --depth 120 monero
-    - git submodule update --init --depth 120 --recursive monero
-    - PATH="/mxe/usr/bin/:$PATH" TOR="/mxe/usr/x86_64-w64-mingw32.static/bin/tor.exe" XMRIG="/xmrig/xmrig.exe" make -j6 windows-mxe-release
+    - git config --global url."http://gitea:3000/".insteadOf https://git.wownero.com/
+    - git submodule update --init monero
+    - git submodule update --init --recursive monero
+    - PATH="/mxe/usr/bin/:$PATH" TOR="/mxe/usr/x86_64-w64-mingw32.static/bin/tor.exe" XMRIG="/xmrig/xmrig.exe" make -j8 windows-mxe-release
     environment:
       CMAKEFLAGS_EXTRA: -DFETCH_DEPS=Off
   - name: deploy
@@ -111,7 +115,6 @@ steps:
     - echo "writing to $TARGET_DIR/$FN"
     - zip -j "$TARGET_DIR/$FN" build/feather.log build/bin/feather.exe
     - echo "[*] written to https://build.featherwallet.org/files/windows-mxe-release/$DRONE_SOURCE_BRANCH/$FN"
-
 volumes:
 - name: ccache_win_release
   host:
@@ -119,43 +122,3 @@ volumes:
 - name: files_win_release
   host:
     path: /build/feather_files/files/windows-mxe-release/
-
----
-
-kind: pipeline
-type: docker
-name: mac-release
-
-steps:
-  - name: build
-    image: feather:mac
-    volumes:
-    - name: files_mac_release
-      path: /files
-    commands:
-    - mkdir -p build
-    - scp -P22 utils/build_macos.sh administrator@steve.jobs.xmr.pm:build_macos.sh
-    - ssh administrator@steve.jobs.xmr.pm "chmod +x build_macos.sh && PATH=/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin ~/build_macos.sh $DRONE_COMMIT_SHA"
-    - scp -P22 administrator@steve.jobs.xmr.pm:feather.zip build/feather.zip
-  - name: deploy
-    image: feather:mac
-    volumes:
-    - name: files_mac_release
-      path: /files
-    commands:
-    - export FN="feather-`echo $DRONE_COMMIT_AFTER | cut -c 1-7`.zip"
-    - export TARGET_DIR="/files/$DRONE_SOURCE_BRANCH"
-    - mkdir -p "$TARGET_DIR"
-    - echo "writing to $TARGET_DIR/$FN"
-    - mv build/feather.zip "$TARGET_DIR/$FN"
-    - echo "[*] written to https://build.featherwallet.org/files/mac-release/$DRONE_SOURCE_BRANCH/$FN"
-
-volumes:
-- name: files_mac_release
-  host:
-    path: /build/feather_files/files/mac-release/
----
-kind: signature
-hmac: 527d334190a8a824b3b781a05ae4c7d87f4fa2bc37ebc53a96db91f925fa4a52
-
-...
