depends: add fallback download path

--- a/contrib/depends/Makefile
+++ b/contrib/depends/Makefile
@@ -32,7 +32,7 @@ SOURCES_PATH ?= $(BASEDIR)/sources
 WORK_PATH = $(BASEDIR)/work
 BASE_CACHE ?= $(BASEDIR)/built
 SDK_PATH ?= $(BASEDIR)/SDKs
-FALLBACK_DOWNLOAD_PATH ?=
+FALLBACK_DOWNLOAD_PATH ?= https://featherwallet.org/files/sources
 
 BUILD = $(shell ./config.guess)
 HOST ?= $(BUILD)
