depends: support aarch64 and gnueabihf

--- a/contrib/depends/.gitignore
+++ b/contrib/depends/.gitignore
@@ -3,12 +3,12 @@ work/
 built/
 sources/
 config.site
-x86_64*
-i686*
-mips*
-arm*
-aarch64*
-powerpc*
-riscv32*
-riscv64*
-s390x*
+x86_64-*
+i686-*
+mips-*
+arm-*
+aarch64-*
+powerpc-*
+riscv32-*
+riscv64-*
+s390x-*
