guix: arm64-apple-darwin builds

--- a/contrib/depends/.gitignore
+++ b/contrib/depends/.gitignore
@@ -3,13 +3,13 @@ work/
 built/
 sources/
 config.site
-x86_64-*
-i686-*
-mips-*
-arm-*
-aarch64-*
-powerpc-*
-riscv32-*
-riscv64-*
-s390x-*
-arm64-*
+x86_64-*/
+i686-*/
+mips-*/
+arm-*/
+aarch64-*/
+powerpc-*/
+riscv32-*/
+riscv64-*/
+s390x-*/
+arm64-*/
